--- a/001-travel/package.json
+++ b/001-travel/package.json
@@ -16,6 +16,8 @@
     "mongodb": "^3.2.3",
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "vue": "^2.6.6",
     "vue-router": "^3.0.4",
     "vuex": "^3.1.0",
