--- a/001-travel/package.json
+++ b/001-travel/package.json
@@ -19,6 +19,7 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue": "^2.6.6",
+    "vue-awesome-swiper": "^2.6.7",
     "vue-router": "^3.0.4",
     "vuex": "^3.1.0",
     "webpack-merge": "^4.2.1"
