--- a/001-travel/package.json
+++ b/001-travel/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.4",
     "fastclick": "^1.0.6",
     "mongodb": "^3.2.3",
+    "mongoose": "^5.5.1",
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
     "stylus": "^0.54.5",
