finish city css

--- a/001-travel/package.json
+++ b/001-travel/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "better-scroll": "^1.15.2",
     "body-parser": "^1.18.3",
     "core-js": "^2.6.5",
     "express": "^4.16.4",
