--- a/001-travel/package.json
+++ b/001-travel/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "babel-polyfill": "^6.26.0",
     "better-scroll": "^1.15.2",
     "body-parser": "^1.18.3",
+    "connect-history-api-fallback": "^1.6.0",
     "core-js": "^2.6.5",
     "express": "^4.16.4",
     "fastclick": "^1.0.6",
