--- a/001-travel/package.json
+++ b/001-travel/package.json
@@ -18,6 +18,7 @@
     "fastclick": "^1.0.6",
     "mongodb": "^3.2.3",
     "mongoose": "^5.5.1",
+    "nodemon": "^1.18.11",
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
     "stylus": "^0.54.5",
